<resources>
    <string name="app_name">Anime.sh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_login_app_name">ANIME.sh</string>
    <string name="main_login_description">A simple APP to track and watch anime.</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="register_button">REGISTER</string>
    <string name="login_welcome_back">Welcome Back</string>
    <string name="login_login">Login to your account</string>
    <string name="login_username_input">Username</string>
    <string name="login_email_input">Email address</string>
    <string name="login_password_input">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_dont_have_an_account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign up</string>

    <string name="register">Register</string>
    <string name="register_create_your_account">Create your account</string>
    <string name="register_email">Email address</string>
    <string name="register_privacy_policy">By registering, you are agreeing to our Terms of use and Privacy Policy.</string>
    <string name="register_already_have_an_account">Already have an account?</string>
    <string name="register_login">Login</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="termsandconditions">I have read and agreed to <a href="http://www.example.com/">terms and conditions</a>.</string>
    <string name="biometric_warning">By setting up the app to use biometric login. You confirm that\n\n* All biometric data currently saved on this device are yours.\n* You will not let other people save biometric data on this device.\n* You device pass code is known only to you.

    </string>
</resources>