<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".LogIn.SignUpFragment"
    tools:layout_editor_absoluteX="-6dp"
    tools:layout_editor_absoluteY="92dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="164dp"
        android:layout_marginBottom="23dp"
        android:text="@string/main_login_app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/register_edit_text_username"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_edit_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/login_password_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/register_edit_text_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/register_edit_text_email_address"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_text_email_address" />

    <EditText
        android:id="@+id/register_edit_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/login_username_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/register_edit_text_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="39dp"
        android:text="@string/register_create_your_account"
        app:layout_constraintBottom_toTopOf="@+id/register_edit_text_username"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/register_edit_text_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_text_password" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="7dp"
        android:text="@string/register_privacy_policy"
        android:textSize="7sp"
        app:layout_constraintBottom_toTopOf="@+id/register_register_button"
        app:layout_constraintEnd_toEndOf="@+id/register_register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_text_confirm_password" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:text="@string/register_already_have_an_account"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/register_login_text_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_register_button" />

    <TextView
        android:id="@+id/register_login_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="124dp"
        android:text="@string/register_login"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/register_register_button" />

    <Button
        android:id="@+id/register_register_button"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#768697"
        android:text="@string/register_button"
        app:layout_constraintBottom_toTopOf="@+id/register_login_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/register_edit_text_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/register_edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/register_edit_text_username"
        app:layout_constraintTop_toBottomOf="@+id/register_edit_text_username" />

</androidx.constraintlayout.widget.ConstraintLayout>