<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".LogIn.LogInFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="261dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_welcome_back"
        android:textColor="#365367"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/login_email_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#365367"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="21dp"
        android:text="@string/login_remember_me"
        android:textColor="#365367"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="121dp"
        android:text="@string/login_sign_up"
        android:textColor="#365367"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="18dp"
        android:text="@string/login_login"
        android:textColor="#365367"
        app:layout_constraintBottom_toTopOf="@+id/login_email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/login_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#768697"
        android:text="@string/login_button"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkedTextView"
        app:rippleColor="#365367" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/login_password_input"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#365367"
        app:layout_constraintBottom_toTopOf="@+id/checkedTextView"
        app:layout_constraintStart_toStartOf="@+id/login_email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login_forgot_password"
        android:textColor="#365367"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkedTextView"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/login_dont_have_an_account"
        android:textColor="#365367"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>